# guild-rs

./: .gitignore  Cargo.toml
.github/workflows/: general.yaml
common/: Cargo.toml
common/src/: lib.rs  requirement.rs  user.rs
common/src/user/: identity.rs  mod.rs
engine/: Cargo.toml
engine/src/: allowlist.rs  lib.rs
plugin-manager/: Cargo.toml
plugin-manager/plugins/: libtest_lib_a.module  libtest_lib_b.module
plugin-manager/src/: build.rs  lib.rs  mockdb.rs
plugins/: plugins.sh
plugins/evm-balance/: Cargo.toml
plugins/evm-balance/src/: balances.rs  lib.rs  provider.rs  rpc.rs
plugins/evm-balance/src/balance/: mod.rs
plugins/evm-balance/src/balance/contract/: mod.rs  multicall.rs
plugins/evm-balance/src/call/: call.rs  calldata.rs  mod.rs  multicall.rs
plugins/evm_balance/: Cargo.toml
plugins/evm_balance/src/: lib.rs
plugins/evm_balance/src/balance/: mod.rs
plugins/evm_balance/src/balance/contract/: mod.rs  multicall.rs
plugins/evm_balance/src/providers/: mod.rs
plugins/evm_balance/src/providers/balancy/: mod.rs  types.rs
plugins/evm_balance/src/providers/jsonrpc/: mod.rs
plugins/sol-balance/src/: lib.rs
plugins/sol_balance/: Cargo.toml
plugins/sol_balance/src/: lib.rs
plugins/test-evm-balance/: Cargo.toml
plugins/test-evm-balance/src/: lib.rs
plugins/test-lib-a/: Cargo.toml
plugins/test-lib-a/src/: lib.rs
plugins/test-lib-b/: Cargo.toml
plugins/test-lib-b/src/: lib.rs
providers/: Cargo.toml
providers/src/: lib.rs
providers/src/evm/: mod.rs
providers/src/evm/balancy/: mod.rs  types.rs
providers/src/evm/jsonrpc/: contract.rs  mod.rs  types.rs
providers/src/evm/jsonrpc/contract/: mod.rs  multicall.rs
requirement/: Cargo.toml
requirement/src/: lib.rs  token.rs
requirements/: Cargo.toml
requirements/evm_balance/: Cargo.toml
requirements/evm_balance/src/: lib.rs
requirements/evm_balance/src/providers/: mod.rs
requirements/evm_balance/src/providers/balancy/: mod.rs
requirements/evm_balance/src/providers/jsonrpc/: mod.rs
requirements/evm_balance/src/providers/jsonrpc/contract/: mod.rs  multicall.rs
requirements/src/: allowlist.rs  balance.rs  check.rs  db.rs  lib.rs  relation.rs  request.rs  requirement.rs  token.rs  user.rs  utils.rs
requirements/src/general/: allowlist.rs  free.rs  mod.rs
requirements/src/variants/: mod.rs
requirements/src/variants/core/: allowlist.rs  balance.rs  free.rs  mod.rs
requirements/src/variants/general/: allowlist.rs  balance.rs  free.rs
