[workspace]
members = [
	"common",
	"requirement",
	"engine",
]
exclude = ["plugins"]

[profile.dev]
opt-level = 3

[workspace.dependencies]
async-trait = { version = "0.1.57", default-features = false }
primitive-types = { version = "0.12.1", features = ["serde"] }
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
thiserror = { version = "1.0.24", default-features = false }
tokio = { version = "1.20.1", features = ["macros"] }
