[workspace]
members = [
	"common",
	"requirement",
	"engine",
]
exclude = ["plugins"]

[profile.dev]
opt-level = 3

[workspace.dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
thiserror = { version = "1.0.24", default-features = false }
