[workspace]
members = [
	"common",
	"plugin-manager",
	"requirements",
]
exclude = ["plugins"]

[profile.dev]
opt-level = 3

[workspace.dependencies]
#reqwest = { version = "0.11.11", features = ["json"] }
#serde = { version = "1.0.144", features = ["derive"] }
#serde_json = "1.0.95"
#thiserror = { version = "1.0.24", default-features = false }
#tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
