[package]
name = "guild-common"
description = "Common types and traits for Guild-Network"
version = "0.1.0"
repository = "https://github.com/agoraxyz/requirement-engine-v2"
readme = "README.md"
license = "MIT"
authors = ["Shronk <ureshpohar@gmail.com>"]
keywords = ["guild", "guild-network", "types"]
categories = [
    "cryptography", "cryptography::cryptocurrencies", "data-structures"
]
edition = "2021"

[dev-dependencies]
shiba = { version = "0.1.1", default-features = false }

[dependencies]
async-trait = { workspace = true }
primitive-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
