[package]
name = "guild-common"
description = "Common types and traits for Guild-Network"
version = "0.1.0"
repository = "https://github.com/agoraxyz/guild-rs"
readme = "README.md"
license = "MIT"
authors = ["Shronk <ureshpohar@gmail.com>"]
keywords = ["guild", "guild-network", "types"]
categories = [
    "cryptography", "cryptography::cryptocurrencies", "data-structures"
]
edition = "2021"

[features]
identity = ["primitive-types"]

[dev-dependencies]
shiba = { version = "0.1.1", default-features = false }

[dependencies]
primitive-types = { version = "0.12.1", features = ["serde"], optional = true }
serde = { workspace = true }
