[package]
name = "guild-common"
description = "Common types and traits for Guild-Network"
version = "0.1.0"
repository = "https://github.com/agoraxyz/guild-rs"
readme = "README.md"
license = "MIT"
authors = ["Shronk <ureshpohar@gmail.com>"]
keywords = ["guild", "guild-network", "types"]
categories = [
    "cryptography", "cryptography::cryptocurrencies", "data-structures"
]
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
parity-scale-codec = { version = "3.2", default-features = false }
