[package]
name = "guild-engine"
description = "Guild-Network requirement engine"
version = "0.1.0"
repository = "https://github.com/agoraxyz/requirement-engine-v2"
readme = "README.md"
license = "MIT"
authors = ["Shronk <ureshpohar@gmail.com>"]
keywords = ["guild", "guild-network", "requirement-engine", "engine"]
categories = [
    "cryptography", "cryptography::cryptocurrencies", "data-structures"
]
edition = "2021"

[dev-dependencies]
tokio = { workspace = true }

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
guild-common = { path = "../common" }
guild-requirements = { path = "../requirements" }
primitive-types = { workspace = true }
requiem = { git = "https://github.com/agoraxyz/requiem.git" }
reqwest = { workspace = true }
thiserror = { workspace = true }
