[package]
name = "guild-engine"
description = "Guild-Network requirement engine"
version = "0.1.0"
repository = "https://github.com/agoraxyz/requirement-engine-v2"
readme = "README.md"
license = "MIT"
authors = ["Shronk <ureshpohar@gmail.com>"]
keywords = ["guild", "guild-network", "requirement-engine", "engine"]
categories = [
    "cryptography", "cryptography::cryptocurrencies", "data-structures"
]
edition = "2021"

[dependencies]
guild-common = { path = "../common" }
guild-requirement = { path = "../requirement" }
requiem = { git = "https://github.com/agoraxyz/requiem.git" }
serde = { workspace = true }
thiserror = { workspace = true }
