[package]
name = "guild-plugin-manager"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
guild-common = { path = "../common" }
libloading = "0.7.4"
redis = "0.23"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_cbor = { workspace = true }
redis-test = "0.2"
