[package]
name = "rusty-gate-providers"
description = "Web3 balance providers"
version = "0.1.0"
repository = "https://github.com/agoraxyz/requirement-engine-v2"
readme = "README.md"
license = "MIT"
authors = ["Shronk <ureshpohar@gmail.com>"]
keywords = ["guild", "guild-network", "provider", "web3"]
categories = [
    "cryptography", "cryptography::cryptocurrencies", "data-structures"
]
edition = "2021"

[features]
balancy = []
nomock = []

[dev-dependencies]
shiba = { version = "0.1.1", default-features = false }

[dependencies]
async-trait = { workspace = true }
config = { version = "0.13.3", default-features = false, features = ["json"] }
ethereum-types = { workspace = true }
futures = { version = "0.3.17" }
lazy_static = { version = "1.4.0", default-features = false }
reqwest = { workspace = true }
rusty-gate-common = { path = "../common" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
