[package]
name = "guild-requirement"
description = "Requirement checking logic for the Guild-Network"
version = "0.1.0"
repository = "https://github.com/agoraxyz/requirement-engine-v2"
readme = "README.md"
license = "MIT"
authors = ["Shronk <ureshpohar@gmail.com>"]
keywords = ["guild", "guild-network", "requirements"]
categories = [
    "cryptography", "cryptography::cryptocurrencies", "data-structures"
]
edition = "2021"

[features]
test-config = []

[dev-dependencies]
tokio = { workspace = true }

[dependencies]
config = { version = "0.13.3", default-features = false, features = ["json"] }
guild-common = { path = "../common" }
libloading = "0.7.4"
serde = { workspace = true }
serde_json = { workspace = true }
redis = { version = "0.22.3" }
reqwest = { workspace = true }
thiserror = { workspace = true }
