[package]
name = "guild-requirements"
description = "Requirement types for the Guild-Network"
version = "0.1.0"
repository = "https://github.com/agoraxyz/requirement-engine-v2"
readme = "README.md"
license = "MIT"
authors = ["Shronk <ureshpohar@gmail.com>"]
keywords = ["guild", "guild-network", "requirements"]
categories = [
    "cryptography", "cryptography::cryptocurrencies", "data-structures"
]
edition = "2021"

[features]
frontend = []
check = []

[dev-dependencies]
tokio = { workspace = true }

[dependencies]
futures = { workspace = true }
reqwest = { workspace = true }
guild-common = { path = "../common" }
guild-providers = { path = "../providers" }
serde = { workspace = true }
serde_json = { version = "1.0.93", default-features = false }
thiserror = { workspace = true }
