[package]
name = "guild-requirements"
description = "Requirement checking logic for the Guild-Network"
version = "0.1.0"
repository = "https://github.com/agoraxyz/requirement-engine-v2"
readme = "README.md"
license = "MIT"
authors = ["Shronk <ureshpohar@gmail.com>"]
keywords = ["guild", "guild-network", "requirements"]
categories = [
    "cryptography", "cryptography::cryptocurrencies", "data-structures"
]
edition = "2021"

[features]
default = ["std"]
std = [
    "guild-common/std",
]
check = [
    "std",
    "anyhow",
    "guild-plugin-manager",
    "reqwest",
]

[dependencies]
anyhow = { version = "1", default-features = false, optional = true}
guild-common = { path = "../common", default-features = false }
guild-plugin-manager = { path = "../plugin-manager", optional = true }
reqwest = { version = "0.11", features = ["blocking"], optional = true }
serde = { workspace = true }
serde_cbor = { workspace = true }

[dev-dependencies]
redis-test = "0.2"
