[package]
name = "evm-balance"
version = "0.1.0"
edition = "2021"

[lib]
name = "evm_balance"
crate-type = ["cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
futures = "0.3.25"
guild-plugin-manager = { path = "../../plugin-manager" }
guild-requirement = { path = "../../requirement" }
#guild-common = { path = "../../common" }
primitive-types = { version = "0.12.1", features = ["serde"] }
#reqwest = { version = "0.11", features = ["json"] }
#serde = { version = "1.0.144", features = ["derive"] }
#serde_json = "1.0.95"
#thiserror = { version = "1.0.24", default-features = false }
#tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
