[package]
name = "evm-balance"
version = "0.1.0"
edition = "2021"

[lib]
name = "evm_balance"
crate-type = ["cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1"
futures = "0.3.25"
guild-common = { path = "../../common" }
guild-plugin-manager = { path = "../../plugin-manager" }
guild-requirement = { path = "../../requirement" }
primitive-types = "0.12.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.95"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
