[package]
name = "evm-balance"
version = "0.1.0"
edition = "2021"

[lib]
name = "evm_balance"
crate-type = ["cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1"
guild-common = { path = "../../common" }
guild-requirements = { path = "../../requirements" }
primitive-types = "0.12.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.95"
zeroize = { version = "1", features = ["zeroize_derive"] }
