[package]
name = "sol-balance"
version = "0.1.0"
edition = "2021"

[lib]
name = "sol_balance"
crate-type = ["cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
guild-common = { path = "../../common" }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.95"
thiserror = { version = "1.0.24", default-features = false }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
