[package]
name = "test-evm-balance"
version = "0.1.0"
edition = "2021"

[lib]
name = "test_evm_balance"
crate-type = ["cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1"
guild-requirements = { path = "../../requirements" }
serde_json = "1"
